# algebraic_simplification_cesar

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
benchmarking/: benchmark.py  main.py
src/: language.rs  lib.rs  main.rs  simplify.rs  tests.rs  z3utils.rs
src/cesar/: .base_pass.rs.swp  base.rs  base_pass.rs  config.rs  intersection.rs  language.rs  mod.rs  pass1.rs  pass10.rs  pass2.rs  pass3.rs  pass4.rs  pass5.rs  pass6.rs  pass7.rs  pass8.rs  pass9.rs  rearrange_pass.rs  simplification.rs  simplify.rs  tests.rs
